# rpn-calculator

./: .dockerignore  .gitignore  Dockerfile  Doxyfile
.github/workflows/: ci.yml
docs/html/: dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen.css  doxygen_crawl.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.map  main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.md5  main_8cpp_source.html  navtreeindex0.js  rpn_8cpp.html  rpn_8cpp.js  rpn_8cpp__incl.map  rpn_8cpp__incl.md5  rpn_8cpp_a56be429255d682ade59a81e806b07752_icgraph.md5  rpn_8cpp_source.html  rpn_8h.html  rpn_8h__incl.map  rpn_8h__incl.md5  rpn_8h_a56be429255d682ade59a81e806b07752_icgraph.map  rpn_8h_source.html
include/: rpn.h
src/: main.cpp  rpn.cpp
tests/: CMakeLists.txt  test_rpn.cpp
